# abaran

./: AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  install.sh  log.md
.github/workflows/: bump-version.yml  ci.yml  codeql.yml  release.yml
.opencode/agents/: abaran.md
.opencode/skills/abaran-dev/: SKILL.md
src/: app.rs  gitui.rs  helix.rs  main.rs  ops.rs  scooter.rs  serpl.rs  session.rs  tree.rs  tui.rs
