[package]
name = "abaran"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31", features = ["term", "ioctl", "poll", "process", "signal", "fs", "uio"] }
walkdir = "2"
ignore = "0.4"
anyhow = "1"
libc = "0.2"
